# markerless-rodent-pose

./: .gitignore  README.md  main.py  pyproject.toml  test_system_info.py
assets/styles/: main.qss
config/: models.json
src/: __init__.py
src/core/: __init__.py  evaluation_manager.py  frame_extractor.py  freezing_manager.py  inference_manager.py  label_manager.py  project_manager.py  tests_manager.py  train_manager.py  training_manager.py
src/ui/: __init__.py  main_window.py
src/ui/styles/: __init__.py  theme.py
src/ui/tabs/: __init__.py  clean_video_tab.py  evaluation_tab.py  extract_tab.py  freezing_tab.py  inference_tab.py  label_tab.py  outlier_tab.py  project_tab.py  system_info_tab.py  tests_tab.py  train_tab.py  training_tab.py
src/ui/widgets/: __init__.py  responsive.py
src/utils/: __init__.py  device.py  logger.py  validators.py  video_utils.py
tests/: __init__.py  conftest.py
tests/core/: test_frame_extractor.py  test_inference_manager.py  test_label_manager.py  test_project_manager.py  test_train_manager.py  test_training_manager.py
tests/ui/: test_init_exports.py  test_theme.py
tests/utils/: test_validators.py  test_video_utils.py
