[project]
name = "final-tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deeplabcut[gui,modelzoo]>=3.0.0rc13",
    "faiss-gpu>=1.7.2",
    "opencv-python>=4.8.0",
    "pyside6>=6.10.0",
    "pyyaml>=6.0.3",
    "tables==3.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
]
